[package]
name = "canvas"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.2"
wasm-bindgen = "0.2.25"
console_error_panic_hook = "0.1.5"

[dependencies.web-sys]
version = "0.3.2"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console',
  'EventTarget'
]
