[package]
name = "canvas"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.6"
wasm-bindgen = "0.2.29"
console_error_panic_hook = "0.1.5"
nalgebra = "0.16.12"

[dependencies.web-sys]
version = "0.3.6"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Window',
  'console',
  'EventTarget'
]
